--- a/templates/lupaPassword.html
+++ b/templates/lupaPassword.html
@@ -18,7 +18,7 @@
     </div>
     <div class="logo-text">Lupa Password</div>
   </div>
-  <a href="index.html" class="nav-link">Home</a>
+  <a href="/" class="nav-link">Home</a>
 </header>
 
 
