--- a/templates/login.html
+++ b/templates/login.html
@@ -20,7 +20,7 @@
     </div>
     <div class="logo-text">Login</div>
   </div>
-  <a href="index.html" class="nav-link">Home</a>
+  <a href="/" class="nav-link">Home</a>
 </header>
 
     <!-- Main Content -->
