--- a/templates/verifikasiOTP.html
+++ b/templates/verifikasiOTP.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Verifikasi OTP - Farming Dashboard</title>
+    <title>Leafie | Verifikasi OTP</title>
     <link rel="stylesheet" href="/static/css/verifikasiOTP.css">
 </head>
 <body>
