--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Farming Dashboard</title>
+    <title>Leafie | Login</title>
     <link rel="stylesheet" href="/static/css/login.css">
 </head>
 
