--- a/templates/lupaPassword.html
+++ b/templates/lupaPassword.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Forgot Password - Farming Dashboard</title>
+    <title>Leafie | Forgot Password</title>
     <link rel="stylesheet" href="/static/css/lupaPassword.css">
 </head>
 <body>
