--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -42,7 +42,9 @@
           <img id="cameraFeed" src="{{ url_for('video_feed') }}" alt="Live Camera" class="camera-frame">
         </div>
         <div class="card camera-control">
-          <button id="cameraBtn" class="btn btn-outline">Matikan Kamera</button>
+          <button id="cameraBtn" class="btn btn-outline">
+              {{ 'Matikan Kamera' if camera_state == 'ON' else 'Nyalakan Kamera' }}
+            </button>
         </div>
       </div>
     </section>
@@ -90,6 +92,32 @@
         <div id="pumpCard" class="card pump-status">
           <div class="bulb-icon">💡</div>
           <div class="pump-text">Status Pompa: <span id="pumpState">{{ pump_state }}</span></div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Monitoring Kesehatan Daun -->
+    <section class="section">
+      <h2 class="section-title">Monitoring Kesehatan Daun</h2>
+      <p class="section-subtitle">tidak disarankan menyalakan kamera lebih dari 1 jam</p>
+
+      <div class="grid-2">
+        <div class="card leaf-control">
+          <button id="leafCameraBtn" class="btn btn-outline">Kamera (ON / OFF)</button>
+          <button id="detectLeafBtn" class="btn">Deteksi Daun</button>
+        </div>
+
+        <div class="card leaf-result">
+          <div class="grid-2">
+            <div class="leaf-status">
+              <h4>Hasil Deteksi</h4>
+              <p id="leafHealthStatus" class="status-text">Menunggu hasil...</p>
+            </div>
+            <div class="leaf-photo">
+              <h4>Foto Daun Terbaru</h4>
+              <img id="leafImage" src="{{ url_for('static', filename='image/sample_leaf.jpg') }}" alt="Daun terbaru" class="leaf-img">
+            </div>
+          </div>
         </div>
       </div>
     </section>
